# conduit

./: .gitignore  README.md  go.mod  go.sum  mkdocs.yml
api/: README.md  action.go  api.pb.go  api.pb.json.go  api.proto  api_grpc.pb.go  transfer.go  transfer_test.go
clients/python/: pyproject.toml
clients/python/examples/: example.py
clients/python/scripts/: generate_pb.sh
clients/python/src/conduit/: __init__.py  client.py  config.py
clients/python/src/conduit/_generated/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
cmd/cli/: main.go
cmd/fta/: main.go
cmd/runner/: main.go
cmd/server/: main.go
defaults/: defaults.go
docker/: Dockerfile.cli  Dockerfile.fta  Dockerfile.runner  Dockerfile.server
docs/: architecture.md  index.md  installation.md  quick-start.md
docs/configs/: conduit-cli-full-reference-config.yaml  conduit-fta-full-reference-config.yaml  conduit-runner-full-referency-config.yaml  conduit-server-full-reference-config.yaml
docs/integrations/: python-client.md  slurm-plugin.md
docs/operations/: cert-generation.md  errant-paths.md  etcd-direct-query.md  full-reference-config.md  ldap.md  start-stop-server.md
docs/service/: conduit-runner.service  conduit-server.service  etcd.service  rqlite.service
docs/usage/: advanced-query.md  conduit-cli-usage.md
examples/docker/: Dockerfile.client  Dockerfile.kdc  Dockerfile.node  Dockerfile.pftool  Dockerfile.rqlite  README.md  build.sh  client-entrypoint.sh  destroy.sh  docker-compose.yaml  fta-entrypoint.sh  rqlite-entrypoint.sh  (+2 more)
util/: process_bytes.go  relations.go  relations_test.go
(+105 files in other folders)
